tests/baselines/reference/derivedClassOverridesWithoutSubtype.errors.txt
tests/cases/conformance/classes/members/inheritanceAndOverriding/derivedClassOverridesWithoutSubtype.ts(8,5): error TS2612: Property 'x' will overwrite the base property in 'Base'. Add a 'declare' modifier or an initializer to avoid this.


==== tests/cases/conformance/classes/members/inheritanceAndOverriding/derivedClassOverridesWithoutSubtype.ts (1 errors) ====
    class Base {
        x: {
            foo: string;
        }
    }
    
    class Derived extends Base {
        x: {
        ~
!!! error TS2612: Property 'x' will overwrite the base property in 'Base'. Add a 'declare' modifier or an initializer to avoid this.
            foo: any;
        }
    }
    
    class Base2 {
        static y: {
            foo: string;
        }
    }
    
    class Derived2 extends Base2 {
        static y: {
            foo: any;
        }
    }